# ducktools-lazyimporter

./: .gitignore  README.MD  README.md  pyproject.toml
.github/workflows/: auto_test.yml  publish_to_pypi.yml  publish_to_testpypi.yml
archive/ast_hack/: ast_hack.py  hook.py
archive/cst_rewrite/: __init__.py
archive/cst_rewrite/examples/: basic_example.py
archive/cst_rewrite/examples/outputs/: basic_example.py
archive/dynamic/tests/example_modules/: from_import.py
docs/: conf.py  index.md
experiments/ast_hack/lazy_importer/: __init__.py  _ast_vendor.py
perf/: hot_loop_perf.py
perf/ex_funcs/: ex_loop.py
src/: lazy_importer.py
src/ducktools/: lazyimporter.py  lazyimporter.pyi
src/ducktools/lazyimporter/: __init__.py  __init__.pyi  capture.py  capture.pyi
src/lazy_importer/: __init__.py  __main__.py  cst_rewriter.py
src/lazy_importer/ast_hack/: ast_hack.py
tests/: test_basic_imports.py  test_capture_imports.py  test_funcs.py  test_import_errors.py  test_importer.py  test_internals.py  test_readme_example.py
tests/example_modules/: basic_import.py  function_module.py  lazy_submod_ex.py
tests/example_modules/captures/: ignore_import_in_function.py
tests/example_modules/ex_mod/: __init__.py  ex_submod.py
tests/example_modules/ex_othermod/: __init__.py
